new world order!

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
-mkdocs==1.0.4
-mkdocs-material==4.6.0
-mkdocs-gitbook
-mkdocs-git-revision-date-localized-plugin==0.4.5
+dynaconf
+nbsphinx
+graphviz
+sphinxcontrib-plantuml
+sphinxcontrib-bibtex
+recommonmark
+sphinx-book-theme==0.0.36
