--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,11 +23,11 @@ jobs:
     - uses: actions/upload-artifact@v1
       with:
         name: DocumentationHTML
-        path: docs/_build/html/
+        path: _build/html/
     - name: Commit documentation changes
       run: |
         git clone https://github.com/thomastu/CaReCur.git --branch gh-pages --single-branch gh-pages
-        cp -r docs/_build/html/* gh-pages/
+        cp -r _build/html/* gh-pages/
         cd gh-pages
         touch .nojekyll
         git config --local user.email "thomasthetu@gmail.com"
