this is where my udates were...

--- a/settings.toml
+++ b/settings.toml
@@ -1,5 +1,5 @@
 [default]
-project_title = "ETAP M.S. Thesis Proposal"
+project_title = "Demand Responsive Public Transit for Rural Communities"
 copyright = "Thomas Tu, 2020"
 author = "Thomas Tu"
 printed = true
