--- a/settings.toml
+++ b/settings.toml
@@ -1,5 +1,5 @@
 [default]
-project_title = "Demand Responsive Public Transit for Rural Communities"
+project_title = "Evaluating the Potential for Micro-transit to Expand Mobility Access in Humboldt County"
 copyright = "Thomas Tu, 2020"
 author = "Thomas Tu"
 printed = true
